--- a/app/src/main/res/layout/activity_here_map.xml
+++ b/app/src/main/res/layout/activity_here_map.xml
@@ -17,6 +17,12 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@mipmap/ic_target"/>
+
     </FrameLayout>
 
     <LinearLayout
@@ -24,6 +30,7 @@
         android:layout_height="wrap_content">
 
         <TextView
+            android:id="@+id/txt_address"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="MAP"
